--- a/css/master.css
+++ b/css/master.css
@@ -1,3 +1,7 @@
 #page {
-    background-color: rgba(255, 99, 71, 0.438);
+    background-image: url("../images/background-1.jpg"), linear-gradient(to bottom, rgba(255, 99, 71, 0.5), rgb(235, 129, 110));
 }
+
+#logo-img {}
+
+.top-bar {}
