--- a/css/master.css
+++ b/css/master.css
@@ -42,4 +42,8 @@ body {
     color: white;
 }
 
-#content {}
+#logo-img img {
+    max-height: 100%;
+    max-width: 100%;
+    object-fit: contain;
+}
