--- a/css/master.css
+++ b/css/master.css
@@ -1,29 +1,19 @@
 /* here put CSS for smaller screens (mobile) */
 
-@media screen and (max-width: 1024px) {
-    .nav-item-link {
-        font-size: 8px;
-    }
-    #navbar {}
-}
-
-@media screen and (max-width: 768px) {
-    #navbar {
-        display: none !important;
-    }
-}
-
 
 /* here put css that only needs to happen on desktop, it's likely there wont be any*/
 
 
 /* here put css that needs to happen no matter what */
 
-#page {
+#bg-img {
     background-image: url("../images/background-1.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
+}
+
+#page {
     display: flex;
     justify-content: space-between;
 }
@@ -35,9 +25,10 @@ body {
 .sticky {
     position: fixed;
     left: 0;
-    width: 10%;
+    width: 12%;
     height: 100%;
     background-color: #2C2F33;
+    padding-right: 1%;
 }
 
 #navbar {
@@ -47,6 +38,7 @@ body {
     justify-content: flex-start;
     width: 100%;
     height: 100%;
+    font-size: 1vw;
 }
 
 .nav-item {
@@ -54,7 +46,7 @@ body {
     margin-bottom: 15px;
 }
 
-.nav-item-link:hover {
+.nav-item:hover {
     color: tomato;
     text-decoration: none;
 }
@@ -63,8 +55,20 @@ body {
     color: white;
 }
 
+.nav-item-link:hover {
+    color: inherit;
+    text-decoration: inherit;
+}
+
 #logo-img img {
-    max-height: 100%;
+    max-height: 900%;
     max-width: 100%;
     object-fit: contain;
+    margin-left: 5%;
+}
+
+#logo-img {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
