--- a/css/master.css
+++ b/css/master.css
@@ -1,5 +1,9 @@
 /* here put CSS for smaller screens (mobile) */
 
+@media only screen and (max-width: 768px) {
+    html {}
+}
+
 
 /* here put css that only needs to happen on desktop, it's likely there wont be any*/
 
@@ -7,7 +11,7 @@
 /* here put css that needs to happen no matter what */
 
 #bg-img {
-    background-image: url("../images/background-1.jpg");
+    background-image: linear-gradient(to bottom, rgba(161, 161, 161, 0.425), rgba(161, 161, 161, 0.425)), url("../images/background-1.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
@@ -15,7 +19,7 @@
 
 #page {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
 }
 
 body {
@@ -38,7 +42,8 @@ body {
     justify-content: flex-start;
     width: 100%;
     height: 100%;
-    font-size: 1vw;
+    font-size: 0.8vw;
+    padding-left: 20%;
 }
 
 .nav-item {
@@ -51,8 +56,8 @@ body {
     text-decoration: none;
 }
 
-.nav-item-link {
-    color: white;
+.white-text {
+    color: white !important;
 }
 
 .nav-item-link:hover {
@@ -61,7 +66,7 @@ body {
 }
 
 #logo-img img {
-    max-height: 900%;
+    max-height: 160px;
     max-width: 100%;
     object-fit: contain;
     margin-left: 5%;
