--- a/css/contact.css
+++ b/css/contact.css
@@ -3,26 +3,6 @@
         display: flex;
         flex-direction: column !important;
     }
-    /* #map {
-        display: none;
-    } */
-}
-
-#content {
-    display: flex;
-    color: white;
-    flex-direction: column;
-    width: 80%;
-    margin-left: 13%;
-}
-
-#header {
-    background-color: transparent;
-    border: 10%;
-    font-size: 4vw;
-    font-family: 'Montserrat', sans-serif;
-    text-align: center;
-    margin-bottom: 30px;
 }
 
 .body-text {
@@ -31,8 +11,8 @@
 }
 
 #map {
-    height: 700px;
-    width: 100%;
+    height: 35vw;
+    width: 60vw;
     margin-right: 2%;
 }
 
@@ -46,6 +26,10 @@
     width: 100%;
 }
 
-.body-header {
-    font-size: 3vw;
+#email {
+    color: rgb(255, 255, 255);
+}
+
+#email:hover {
+    text-decoration: underline;
 }
