--- a/css/master.css
+++ b/css/master.css
@@ -86,3 +86,32 @@ body {
     flex-direction: column;
     justify-content: center;
 }
+
+#header {
+    background-color: transparent;
+    border: 10%;
+    font-size: 4vw;
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
+    margin-bottom: 30px;
+    color: rgb(255, 213, 213);
+}
+
+#content {
+    display: flex;
+    color: white;
+    flex-direction: column;
+    width: 80%;
+    margin-left: 13%;
+    align-self: left;
+}
+
+.body-header {
+    font-size: 2vw;
+    color: rgb(255, 213, 213);
+}
+
+.body-text {
+    width: 100%;
+    font-size: 1.2vw;
+}
