added home.html and join.html

--- a/css/master.css
+++ b/css/master.css
@@ -110,6 +110,7 @@ body {
     padding-bottom: 1%;
     margin-bottom: 0.5%;
     margin-top: 0.5%;
+    margin-right: 0% !important;
 }
 
 .body-header {
