--- a/css/master.css
+++ b/css/master.css
@@ -110,7 +110,7 @@ body {
     padding-bottom: 1%;
     margin-bottom: 0.5%;
     margin-top: 0.5%;
-    margin-right: 0% !important;
+    margin-right: 0;
 }
 
 .body-header {
@@ -121,4 +121,8 @@ body {
 .body-text {
     width: 100%;
     font-size: 1.2vw;
+}
+
+body {
+    margin-left: 13%;
 }
