--- a/css/master.css
+++ b/css/master.css
@@ -131,3 +131,15 @@ hr {
     border: 1px solid rgb(255, 213, 213) !important;
     width: 100%;
 }
+
+.btn-custom {
+    align-self: center;
+    background-color: tomato !important;
+    border-color: tomato !important;
+    color: white !important;
+}
+
+.btn-custom:hover {
+    background-color: rgb(252, 38, 0) !important;
+    border-color: rgb(252, 38, 0) !important;
+}
