--- a/css/master.css
+++ b/css/master.css
@@ -114,13 +114,18 @@ body {
 }
 
 .body-header {
-    font-size: 2vw;
+    font-size: 2.2vw;
     color: rgb(255, 213, 213);
 }
 
 .body-text {
     width: 100%;
     font-size: 1.2vw !important;
+}
+
+.body-text-big {
+    width: 100%;
+    font-size: 1.6vw !important;
 }
 
 body {
