Changed pages to be more mobile friendly

--- a/css/kessinger.css
+++ b/css/kessinger.css
@@ -30,3 +30,9 @@
 .btn-w {
     width: 10vw !important;
 }
+
+@media only screen and (max-width: 768px) {
+    .btn-w {
+        width: 32vw !important;
+    }
+}
