--- a/css/contact.css
+++ b/css/contact.css
@@ -37,3 +37,10 @@
 #content {
     margin-bottom: 0%;
 }
+
+@media only screen and (max-width: 768px) {
+    #map {
+        width: 70vw;
+        height: 100vw;
+    }
+}
