Fixed styling for mobile on about page

--- a/css/about.css
+++ b/css/about.css
@@ -17,3 +17,9 @@
 .yellow {
     border-bottom: 2px solid yellow;
 }
+
+@media only screen and (max-width: 768px) {
+    .ppl {
+        min-width: 33vw;
+    }
+}
