--- a/css/master.css
+++ b/css/master.css
@@ -3,6 +3,10 @@
 
 /* here put css that needs to happen no matter what */
 
+html,body{
+    margin:0;
+}
+
 #bg-img {
     background-image: linear-gradient(to bottom, rgba(161, 161, 161, 0.425), rgba(161, 161, 161, 0.425)), url("../images/background-1.jpg");
     background-repeat: no-repeat;
@@ -150,7 +154,7 @@ hr {
     display: inline-block;
     color: white;
     font-size: 6vw;
-    padding: .2vw 2.5vw;
+    padding: 0 2.5vw 1.4vw 2.5vw;
     margin: 1vw .8vw;
 }
 
